# rwer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml
benches/: benchmark.rs
crates/rwer-wasm/: Cargo.toml
crates/rwer-wasm/src/: lib.rs
examples/: basic_usage.rs
js/: package.json
js/examples/: basic.mjs
js/tests/: api.test.mjs
src/: alignment.rs  alignment_fast.rs  chinese.rs  cli.rs  lib.rs  metrics.rs  output.rs  transform.rs
tests/: integration_cer.rs  integration_chinese.rs  integration_chinese_variant.rs  integration_metrics.rs  integration_transform.rs  integration_wer.rs
