[package]
name = "rwer"
description = "A fast Rust crate for WER, CER, and related ASR evaluation metrics"
keywords = ["wer", "cer", "asr", "nlp"]
categories = ["text-processing", "science"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "rwer"
path = "src/lib.rs"

[[bin]]
name = "rwer"
path = "src/bin/rwer.rs"
required-features = ["cli"]

[features]
default = []
chinese-variant = ["dep:zhconv"]
cli = ["dep:clap", "dep:serde", "dep:serde_json"]

[dependencies]
unicode-segmentation = "1.13"
unicode-normalization = "0.1"
rapidfuzz = "0.5"
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
zhconv = { version = "0.4", default-features = false, features = ["opencc"], optional = true }

[dev-dependencies]
rstest = "0.26"
criterion = "0.8"

[[bench]]
name = "benchmark"
harness = false

[profile.test]
opt-level = 1

[workspace]
members = ["crates/rwer-wasm"]
resolver = "3"

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/ryaningli/rwer"
