[package]
name = "rwer-wasm"
description = "Fast Rust WebAssembly bindings for rwer — WER, CER, and ASR evaluation metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rwer = { path = "../.." }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
